// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderInputTextField renders html for number type 1`] = `
<div
  className="pgn__form-group"
>
  <FormGroupContextProvider
    controlId="Test-text-label"
    isInvalid={false}
    isValid={false}
  >
    <FormLabel
      isInline={false}
    >
      TestLabel
    </FormLabel>
    <ForwardRef
      as="input"
      autoResize={false}
      disabled={false}
      id="Test-text-label"
      maxLength=""
      name="Test"
      pattern={null}
      placeholder=""
      plaintext={false}
      required={false}
      type="number"
    />
  </FormGroupContextProvider>
</div>
`;

exports[`RenderInputTextField renders html for text 1`] = `
<div
  className="pgn__form-group"
>
  <FormGroupContextProvider
    controlId="Test-text-label"
    isInvalid={false}
    isValid={false}
  >
    <FormLabel
      isInline={false}
    >
      TestLabel
    </FormLabel>
    <ForwardRef
      as="input"
      autoResize={false}
      disabled={false}
      id="Test-text-label"
      maxLength=""
      name="Test"
      pattern={null}
      placeholder=""
      plaintext={false}
      required={false}
      type="text"
    />
  </FormGroupContextProvider>
</div>
`;
